Avoiding exception with java9+
java.lang.NoClassDefFoundError: javax/xml/bind/annotation/XmlSchema