@@ -74,6 +74,9 @@ buildAndroid(){
   echo "ANDROID_SDK_ROOT: $ANDROID_SDK_ROOT"
   echo "ANDROID_NDK_ROOT: $ANDROID_NDK_ROOT"
   echo "JAVA_HOME: $JAVA_HOME"
+  
+  # avoiding error : java.lang.NoClassDefFoundError: javax/xml/bind/annotation/XmlSchema
+  export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
 
   echo "Attempting to build $project for Android"
   /Applications/Unity/Unity.app/Contents/MacOS/Unity \
